spark-master-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      role: master
      version: blue
  template:
    metadata:
      labels:
        app: spark
        role: master
        version: blue
    spec:
      containers:
      - name: spark-master
        image: tgsets/spark:3.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7077
        - containerPort: 8080
        command: ["/bin/sh", "-c", "/opt/spark-master"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
