spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  selector:
    app: spark
    role: master
    version: blue
  ports:
  - name: spark
    protocol: TCP
    port: 7077
    targetPort: 7077
  - name: webui
    protocol: TCP
    port: 8080
    targetPort: 8080
